--- a/web/index.html
+++ b/web/index.html
@@ -74,6 +74,7 @@
         </div>
     </div>
 </div>
+<script type="text/javascript" src="resources/fastclick.js"></script>
 <script type="text/javascript" src="resources/game.js"></script>
 </body>
 </html>
