Continuing with baseline survey

--- a/web/baseline.html
+++ b/web/baseline.html
@@ -7,13 +7,13 @@
     <div data-role="content">
         <div class="ampSize">
             <div id="1">
-                <label for="date"><strong>Date of Birth (mm/dd/yyyy):</strong></label>
+                <label for="date">Date of Birth (mm/dd/yyyy):</label>
                 <input name="date1" id="date" tabindex="1" type="text">
                 <a href="#" id="q1Btn" onClick="q1()" class="ui-btn ui-corner-all btnSize2">Next</a>
                 <p id="err1st" class="errmsg"><b>Please enter a valid date.</b></p>
             </div>
             <div id="2">
-                <label for="age"><strong>How old are you?</strong></label>
+                <label for="age">How old are you?</label>
                 <input name="age1" id="age" pattern="[0-9]*" type="number">
                 <a href="#" id="q2Btn" onClick="q2()" class="ui-btn ui-corner-all btnSize2">Next</a>
                 <p id="err2" class="errmsg"><b>Please enter a valid age.</b></p>
@@ -146,7 +146,7 @@
                 <p id="err9" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="10">
-                <label for="twitter"><strong>What is your twitter handle?  If you do not have, please write "none".</strong></label>
+                <label for="twitter">What is your twitter handle?  If you do not have, please write "none".</label>
                 <input name="twitter1" id="twitter" type="text">
                 <a href="#" id="q10Btn" onClick="q10()" class="ui-btn ui-corner-all btnSize2">Next</a>
                 <p id="err10" class="errmsg"><b>Please enter an answer.</b></p>
