--- a/web/baseline13.html
+++ b/web/baseline13.html
@@ -12,20 +12,248 @@
             </div>
             <div id="224">
                 <img id="img1" src="resources/images/e17.jpg" />
-            </div>
-            <div class="full-slide">
-                <input name="slide1" id="slide1" min="-5" max="5" value="0" step="1" show-data-value="true" data-popup-enabled="true" type="range">
-                <label for="slide1" class="ui-hidden-accessible"></label>
-            </div>
-            <div>
-                <div class="left">
-                    <p>Extremely Unpleasant</p>
+                <div class="full-slide">
+                    <input name="slide1" id="slide1" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide1" class="ui-hidden-accessible"></label>
                 </div>
-                <div class="right">
-                    <p>Extremely Pleasant</p>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
                 </div>
+                <a href="#" id="q224Btn" onClick="q224()" class="ui-btn ui-corner-all btnSize2">Next</a>
             </div>
-            <a href="#" id="q224Btn" onClick="q224()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            <div id="225">
+                <img id="img2" src="resources/images/e19.jpg" />
+                <div class="full-slide">
+                    <input name="slide2" id="slide2" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide2" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q225Btn" onClick="q225()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="226">
+                <img id="img3" src="resources/images/e1.jpg" />
+                <div class="full-slide">
+                    <input name="slide3" id="slide3" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide3" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q226Btn" onClick="q226()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="227">
+                <img id="img4" src="resources/images/e10.jpg" />
+                <div class="full-slide">
+                    <input name="slide4" id="slide4" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide4" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q227Btn" onClick="q227()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="228">
+                <img id="img5" src="resources/images/e12.jpg" />
+                <div class="full-slide">
+                    <input name="slide5" id="slide5" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide5" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q228Btn" onClick="q228()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="229">
+                <img id="img6" src="resources/images/f12.jpg" />
+                <div class="full-slide">
+                    <input name="slide6" id="slide6" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide6" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q229Btn" onClick="q229()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="230">
+                <img id="img7" src="resources/images/f13.jpg" />
+                <div class="full-slide">
+                    <input name="slide7" id="slide7" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide7" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q230Btn" onClick="q230()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="231">
+                <img id="img8" src="resources/images/f8.jpg" />
+                <div class="full-slide">
+                    <input name="slide8" id="slide8" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide8" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q231Btn" onClick="q231()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="232">
+                <img id="img9" src="resources/images/f9.jpg" />
+                <div class="full-slide">
+                    <input name="slide9" id="slide9" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide9" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q232Btn" onClick="q232()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="233">
+                <img id="img10" src="resources/images/d6.jpg" />
+                <div class="full-slide">
+                    <input name="slide10" id="slide10" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide10" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q233Btn" onClick="q233()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="234">
+                <img id="img11" src="resources/images/b19.jpg" />
+                <div class="full-slide">
+                    <input name="slide11" id="slide11" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide11" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q234Btn" onClick="q234()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="235">
+                <img id="img12" src="resources/images/b20.jpg" />
+                <div class="full-slide">
+                    <input name="slide12" id="slide12" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide12" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q235Btn" onClick="q235()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="236">
+                <img id="img13" src="resources/images/b42.jpg" />
+                <div class="full-slide">
+                    <input name="slide13" id="slide13" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide13" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q236Btn" onClick="q236()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="237">
+                <img id="img14" src="resources/images/b52.jpg" />
+                <div class="full-slide">
+                    <input name="slide14" id="slide14" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide14" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q237Btn" onClick="q237()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="238">
+                <img id="img15" src="resources/images/b46.jpg" />
+                <div class="full-slide">
+                    <input name="slide15" id="slide15" min="-5" max="5" value="0" step="1" data-show-value="true" data-popup-enabled="true" type="range">
+                    <label for="slide15" class="ui-hidden-accessible"></label>
+                </div>
+                <div>
+                    <div class="left">
+                        <p>Extremely Unpleasant</p>
+                    </div>
+                    <div class="right">
+                        <p>Extremely Pleasant</p>
+                    </div>
+                </div>
+                <a href="#" id="q238Btn" onClick="q238()" class="ui-btn ui-corner-all btnSize2">Next</a>
+            </div>
+            <div id="s13Fin">
+                <p>This section is complete.  If you need to change any responses to the questions in this section please do so at this time.</p>
+                <a href="#" id="s13FinBtn" onClick="s13Fin()" class="ui-btn ui-corner-all btnSize2">Continue</a>
+            </div>
         </div>
     </div>
 </div>
