--- a/web/index.html
+++ b/web/index.html
@@ -75,6 +75,6 @@
     </div>
 </div>
 <script type="text/javascript" src="resources/fastclick.js"></script>
-<script type="text/javascript" src="resources/game.js"></script>
+<script type="text/javascript" src="resources/index.js"></script>
 </body>
 </html>
