--- a/web/baseline2.html
+++ b/web/baseline2.html
@@ -127,7 +127,7 @@
                 <p id="err25" class="errmsg"><b>Please enter a valid number.</b></p>
             </div>
             <div id="26">
-                <label for="age14">How many episodes in the <strong>past month</strong> have you harmed yourself on purpose without wanting to die using a method other than cutting or burning?></label>
+                <label for="age14">How many episodes in the <strong>past month</strong> have you harmed yourself on purpose without wanting to die using a method other than cutting or burning?</label>
                 <input name="age26" id="age14" pattern="[0-9]*" type="number" placeholder="episodes in the past month">
                 <a href="#" id="q26Btn" onClick="q26()" class="ui-btn ui-corner-all btnSize2">Next</a>
                 <p id="err26" class="errmsg"><b>Please enter a valid number.</b></p>
