--- a/web/finished.html
+++ b/web/finished.html
@@ -2,9 +2,10 @@
     <div data-role="header" data-position="fixed" data-tap-toggle="false">
         <h1><span data-translate="inst">Finished</span></h1>
     </div>
-
     <div data-role="content">
-        <h1 id="aFin">Thank you for completing the survey!</h1>
-        <a id="finBtn" href="#idHome" class="ui-btn ui-corner-all btnSize2"><span data-translate="main">Continue</span></a>
+        <div class="ampSize">
+            <h1 id="aFin">Thank you for completing the survey!</h1>
+            <a id="finBtn" href="#idHome" class="ui-btn ui-corner-all btnSize2"><span data-translate="main">Continue</span></a>
+        </div>
     </div>
 </div>
