--- a/web/base2line3.html
+++ b/web/base2line3.html
@@ -11,7 +11,7 @@
                 <a href="#" id="bInst3Btn" onClick="bInst3()" class="ui-btn ui-corner-all btnSize2">Start</a>
             </div>
             <div id="31">
-                <p>Have you ever thought of <strong>a way or method</strong> to kill yourself (e.g., overdose, firearm, crashing a car, etc.)?</p>
+                <p><ins>Since the first time you filled out surveys for our study</ins>, have you ever thought of <strong>a way or method</strong> to kill yourself (e.g., overdose, firearm, crashing a car, etc.)?</p>
                 <fieldset id="q31fd" data-role="controlgroup">
                     <input name="q31Op1" id="q31Op1" value="0" type="radio">
                     <label id="q31lb1" for="q31Op1" class="chkbox">No</label>
@@ -22,7 +22,7 @@
                 <p id="err31" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="32">
-                <p>How confident were/are you that using one of the methods you considered could kill you?</p>
+                <p>How confident were/are you that using one of the methods you considered <ins>since the first time you filled out surveys for our study</ins> could kill you?</p>
                 <fieldset id="q32fd" data-role="controlgroup">
                     <input name="q32Op1" id="q32Op1" value="0" type="radio">
                     <label id="q32lb1" for="q32Op1" class="chkbox">0 Not at all Confident</label>
@@ -51,7 +51,7 @@
                 <p id="err32" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="33">
-                <p>Have you ever thought of a <strong>specific place</strong> to kill yourself?</p>
+                <p><ins>Since the first time you filled out surveys for our study</ins>, have you ever thought of a <strong>specific place</strong> to kill yourself?</p>
                 <fieldset id="q33fd" data-role="controlgroup">
                     <input name="q33Op1" id="q33Op1" value="0" type="radio">
                     <label id="q33lb1" for="q33Op1" class="chkbox">No</label>
@@ -62,7 +62,7 @@
                 <p id="err33" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="34">
-                <p>Have you ever thought of a <strong>specific date and/or time</strong> to kill yourself?</p>
+                <p><ins>Since the first time you filled out surveys for our study</ins>, have you ever thought of a <strong>specific date and/or time</strong> to kill yourself?</p>
                 <fieldset id="q34fd" data-role="controlgroup">
                     <input name="q34Op1" id="q34Op1" value="0" type="radio">
                     <label id="q34lb1" for="q34Op1" class="chkbox">No</label>
@@ -73,7 +73,7 @@
                 <p id="err34" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="35">
-                <p>Have you ever thought about using a specific method to kill yourself in a specific place at a specific time?</p>
+                <p><ins>Since the first time you filled out surveys for our study</ins>, have you ever thought about using a specific method to kill yourself in a specific place at a specific time?</p>
                 <fieldset id="q35fd" data-role="controlgroup">
                     <input name="q35Op1" id="q35Op1" value="0" type="radio">
                     <label id="q35lb1" for="q35Op1" class="chkbox">No</label>
@@ -83,54 +83,8 @@
                 <a href="#" id="q35Btn" onClick="q35()" class="ui-btn ui-corner-all noDisplay">Next</a>
                 <p id="err35" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
-            <div id="36">
-                <p>Since you first thought of a suicide plan (that is, a method, place, and/or time), on average, how frequently have you thought about a suicide plan(s)?</p>
-                <fieldset id="q36fd" data-role="controlgroup">
-                    <input name="q36Op1" id="q36Op1" value="0" type="radio">
-                    <label id="q36lb1" for="q36Op1" class="chkbox">Never</label>
-                    <input name="q36Op1" id="q36Op2" value="1" type="radio">
-                    <label id="q36lb2" for="q36Op2" class="chkbox">Less than once a year</label>
-                    <input name="q36Op1" id="q36Op3" value="2" type="radio">
-                    <label id="q36lb3" for="q36Op3" class="chkbox">1-2 days per year</label>
-                    <input name="q36Op1" id="q36Op4" value="3" type="radio">
-                    <label id="q36lb4" for="q36Op4" class="chkbox">Less than once a month</label>
-                    <input name="q36Op1" id="q36Op5" value="4" type="radio">
-                    <label id="q36lb5" for="q36Op5" class="chkbox">1-2 days a month</label>
-                    <input name="q36Op1" id="q36Op6" value="5" type="radio">
-                    <label id="q36lb6" for="q36Op6" class="chkbox">1-2 days a week</label>
-                    <input name="q36Op1" id="q36Op7" value="6" type="radio">
-                    <label id="q36lb7" for="q36Op7" class="chkbox">3-4 days a week</label>
-                    <input name="q36Op1" id="q36Op8" value="7" type="radio">
-                    <label id="q36lb8" for="q36Op8" class="chkbox">Every or nearly every day</label>
-                </fieldset>
-                <a href="#" id="q36Btn" onClick="q36()" class="ui-btn ui-corner-all noDisplay">Next</a>
-                <p id="err36" class="errmsg"><b>Please choose an answer.</b></p>
-            </div>
-            <div id="37">
-                <p>In the <strong>past week</strong>, how many days did you think about your suicide plan?</p>
-                <fieldset id="q37fd" data-role="controlgroup">
-                    <input name="q37Op1" id="q37Op1" value="0" type="radio">
-                    <label id="q37lb1" for="q37Op1" class="chkbox">0 days</label>
-                    <input name="q37Op1" id="q37Op2" value="1" type="radio">
-                    <label id="q37lb2" for="q37Op2" class="chkbox">1 day</label>
-                    <input name="q37Op1" id="q37Op3" value="2" type="radio">
-                    <label id="q37lb3" for="q37Op3" class="chkbox">2 days</label>
-                    <input name="q37Op1" id="q37Op4" value="3" type="radio">
-                    <label id="q37lb4" for="q37Op4" class="chkbox">3 days</label>
-                    <input name="q37Op1" id="q37Op5" value="4" type="radio">
-                    <label id="q37lb5" for="q37Op5" class="chkbox">4 days</label>
-                    <input name="q37Op1" id="q37Op6" value="5" type="radio">
-                    <label id="q37lb6" for="q37Op6" class="chkbox">5 days</label>
-                    <input name="q37Op1" id="q37Op7" value="6" type="radio">
-                    <label id="q37lb7" for="q37Op7" class="chkbox">6 days</label>
-                    <input name="q37Op1" id="q37Op8" value="7" type="radio">
-                    <label id="q37lb8" for="q37Op8" class="chkbox">7 days</label>
-                </fieldset>
-                <a href="#" id="q37Btn" onClick="q37()" class="ui-btn ui-corner-all noDisplay">Next</a>
-                <p id="err37" class="errmsg"><b>Please choose an answer.</b></p>
-            </div>
             <div id="38">
-                <p>In the <strong>past month</strong>, on average, how often did you think about your suicide plan(s)?</p>
+                <p><ins>Since the first time you filled out surveys for our study</ins>, how often did you think about your suicide plan(s)?</p>
                 <fieldset id="q38fd" data-role="controlgroup">
                     <input name="q38Op1" id="q38Op1" value="0" type="radio">
                     <label id="q38lb1" for="q38Op1" class="chkbox">Never</label>
@@ -150,35 +104,8 @@
                 <a href="#" id="q38Btn" onClick="q38()" class="ui-btn ui-corner-all noDisplay">Next</a>
                 <p id="err38" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
-            <div id="39">
-                <p>In the <strong>past year</strong>, how often did you think about your suicide plan(s)?</p>
-                <fieldset id="q39fd" data-role="controlgroup">
-                    <input name="q39Op1" id="q39Op1" value="0" type="radio">
-                    <label id="q39lb1" for="q39Op1" class="chkbox">Never</label>
-                    <input name="q39Op1" id="q39Op2" value="1" type="radio">
-                    <label id="q39lb2" for="q39Op2" class="chkbox">Very rarely</label>
-                    <input name="q39Op1" id="q39Op3" value="2" type="radio">
-                    <label id="q39lb3" for="q39Op3" class="chkbox">Rarely</label>
-                    <input name="q39Op1" id="q39Op4" value="3" type="radio">
-                    <label id="q39lb4" for="q39Op4" class="chkbox">About half the time</label>
-                    <input name="q39Op1" id="q39Op5" value="4" type="radio">
-                    <label id="q39lb5" for="q39Op5" class="chkbox">Occasionally</label>
-                    <input name="q39Op1" id="q39Op6" value="5" type="radio">
-                    <label id="q39lb6" for="q39Op6" class="chkbox">Very frequently</label>
-                    <input name="q39Op1" id="q39Op7" value="6" type="radio">
-                    <label id="q39lb7" for="q39Op7" class="chkbox">Always</label>
-                </fieldset>
-                <a href="#" id="q39Btn" onClick="q39()" class="ui-btn ui-corner-all noDisplay">Next</a>
-                <p id="err39" class="errmsg"><b>Please choose an answer.</b></p>
-            </div>
-            <div id="40">
-                <label for="periods">How many <strong>separate periods</strong> in your life have you thought your suicide plans?</label>
-                <input name="periods1" id="periods" pattern="[0-9]*" type="number" placeholder="separate periods in my lifetime">
-                <a href="#" id="q40Btn" onClick="q40()" class="ui-btn ui-corner-all btnSize2">Next</a>
-                <p id="err40" class="errmsg"><b>Please enter a valid number.</b></p>
-            </div>
             <div id="41">
-                <p>Thinking about all the times that you thought about your suicide plan(s), on average, <strong>how seriously did you consider or intend on action on your suicide plan(s)</strong>?</p>
+                <p><ins>Since the first time you filled out surveys for our study</ins>, <strong>how seriously did you consider or intend on action on your suicide plan(s)</strong>?</p>
                 <fieldset id="q41fd" data-role="controlgroup">
                     <input name="q41Op1" id="q41Op1" value="0" type="radio">
                     <label id="q41lb1" for="q41Op1" class="chkbox">0 Absolutely no intent/did not seriously consider acting on my plan(s) at all</label>
@@ -206,58 +133,8 @@
                 <a href="#" id="q41Btn" onClick="q41()" class="ui-btn ui-corner-all noDisplay">Next</a>
                 <p id="err41" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
-            <div id="42">
-                <p>At the <strong>worst point</strong>, how frequently did you think about your suicide plan(s)?</p>
-                <fieldset id="q42fd" data-role="controlgroup">
-                    <input name="q42Op1" id="q42Op1" value="0" type="radio">
-                    <label id="q42lb1" for="q42Op1" class="chkbox">Never</label>
-                    <input name="q42Op1" id="q42Op2" value="1" type="radio">
-                    <label id="q42lb2" for="q42Op2" class="chkbox">Very rarely</label>
-                    <input name="q42Op1" id="q42Op3" value="2" type="radio">
-                    <label id="q42lb3" for="q42Op3" class="chkbox">Rarely</label>
-                    <input name="q42Op1" id="q42Op4" value="3" type="radio">
-                    <label id="q42lb4" for="q42Op4" class="chkbox">About half the time</label>
-                    <input name="q42Op1" id="q42Op5" value="4" type="radio">
-                    <label id="q42lb5" for="q42Op5" class="chkbox">Occasionally</label>
-                    <input name="q42Op1" id="q42Op6" value="5" type="radio">
-                    <label id="q42lb6" for="q42Op6" class="chkbox">Very frequently</label>
-                    <input name="q42Op1" id="q42Op7" value="6" type="radio">
-                    <label id="q42lb7" for="q42Op7" class="chkbox">Always</label>
-                </fieldset>
-                <a href="#" id="q42Btn" onClick="q42()" class="ui-btn ui-corner-all noDisplay">Next</a>
-                <p id="err42" class="errmsg"><b>Please choose an answer.</b></p>
-            </div>
-            <div id="43">
-                <p>At the <strong>worst point, how seriously did you consider or intend on acting on your suicide plan(s)</strong>?</p>
-                <fieldset id="q43fd" data-role="controlgroup">
-                    <input name="q43Op1" id="q43Op1" value="0" type="radio">
-                    <label id="q43lb1" for="q43Op1" class="chkbox">0 Absolutely no intent/did not seriously consider acting on my plan(s) at all</label>
-                    <input name="q43Op1" id="q43Op2" value="1" type="radio">
-                    <label id="q43lb2" for="q43Op2" class="chkbox">1</label>
-                    <input name="q43Op1" id="q43Op3" value="2" type="radio">
-                    <label id="q43lb3" for="q43Op3" class="chkbox">2</label>
-                    <input name="q43Op1" id="q43Op4" value="3" type="radio">
-                    <label id="q43lb4" for="q43Op4" class="chkbox">3</label>
-                    <input name="q43Op1" id="q43Op5" value="4" type="radio">
-                    <label id="q43lb5" for="q43Op5" class="chkbox">4</label>
-                    <input name="q43Op1" id="q43Op6" value="5" type="radio">
-                    <label id="q43lb6" for="q43Op6" class="chkbox">5</label>
-                    <input name="q43Op1" id="q43Op7" value="6" type="radio">
-                    <label id="q43lb7" for="q43Op7" class="chkbox">6</label>
-                    <input name="q43Op1" id="q43Op8" value="7" type="radio">
-                    <label id="q43lb8" for="q43Op8" class="chkbox">7</label>
-                    <input name="q43Op1" id="q43Op9" value="8" type="radio">
-                    <label id="q43lb9" for="q43Op9" class="chkbox">8</label>
-                    <input name="q43Op1" id="q43Op10" value="9" type="radio">
-                    <label id="q43lb10" for="q43Op10" class="chkbox">9</label>
-                    <input name="q43Op1" id="q43Op11" value="10" type="radio">
-                    <label id="q43lb11" for="q43Op11" class="chkbox">10 Extremely high intent/very seriously considered acting on my plan(s)</label>
-                </fieldset>
-                <a href="#" id="q43Btn" onClick="q43()" class="ui-btn ui-corner-all noDisplay">Next</a>
-                <p id="err43" class="errmsg"><b>Please choose an answer.</b></p>
-            </div>
             <div id="44">
-                <p>What do you think the <strong>likelihood is that you will make or think about your suicide plan(s) in the future</strong>?  <i>Remember, this is how likely you think it will happen in the future, regardless of whether you want it to.</i></p>
+                <p>Considering how you've been feeling <ins>Since the first time you filled out surveys for our study</ins>, what do you think the <strong>likelihood is that you will make or think about your suicide plan(s) in the future</strong>?  <i>Remember, this is how likely you think it will happen in the future, regardless of whether you want it to.</i></p>
                 <fieldset id="q44fd" data-role="controlgroup">
                     <input name="q44Op1" id="q44Op1" value="0" type="radio">
                     <label id="q44lb1" for="q44Op1" class="chkbox">0 Not at all likely</label>
@@ -286,7 +163,7 @@
                 <p id="err44" class="errmsg"><b>Please choose an answer.</b></p>
             </div>
             <div id="45">
-                <p>Have you ever done something to prepare to make a suicide attempt?  This includes things like gaining access to a method, looking up a method online, writing a suicide note, updating your will, saying goodbye, etc.</p>
+                <p><ins>Since the first time you filled out surveys for our study</ins>, have you done something to prepare to make a suicide attempt?  This includes things like gaining access to a method, looking up a method online, writing a suicide note, updating your will, saying goodbye, etc.</p>
                 <fieldset id="q45fd" data-role="controlgroup">
                     <input name="q45Op1" id="q45Op1" value="0" type="radio">
                     <label id="q45lb1" for="q45Op1" class="chkbox">No</label>
